Fixed up sentence reference doc and added more examples

--- a/docs/reference/sentences.mdx
+++ b/docs/reference/sentences.mdx
@@ -15,26 +15,34 @@ The structure of morphemes, phrases and sentence constituents.
 
 ## Morphosyntactics
 
-Hîsyêô is called an [isolating
+Hîsyêô is considered an [isolating
 language](https://en.wikipedia.org/wiki/Isolating_language) because all words
-are a single morpheme. A morpheme is a single unit of meaning. In English, the
-word "cat" is a single morpheme but the word "cats" is two morphemes: "cat" +
-"s" where the "s" is the morpheme that signifies that a noun is plural. The word
-"intwined" is three morphemes, "in" for the meaning of *interconnectedness*,
-"twine" for the verb that means to wrap or weave with a twine-like object, and
-"ed" for the past participle of the verb (the modifier form in past tense). Some
-examples of isolating languages are
+are a single morpheme. Some examples of isolating languages are
 [Yoruba](https://en.wikipedia.org/wiki/Yoruba_language#Grammar),
 [Vietnamese](https://en.wikipedia.org/wiki/Vietnamese_grammar), and
 [Thai](https://en.wikipedia.org/wiki/Thai_language#Grammar).
 
+:::info What Is A Morpheme?
+
+A [morpheme](https://en.wikipedia.org/wiki/Morpheme) is a single unit of
+meaning. In English, the word "cat" is a single morpheme but the word "cats" is
+two morphemes: "cat" + "s" where the "s" is the morpheme that signifies that a
+noun is plural. The word "intwined" is three morphemes, "in" for the meaning of
+*interconnectedness*, "twine" for the verb that means to wrap or weave with a
+twine-like object, and "ed" for the past participle of the verb (the modifier
+form in past tense).
+
+:::
+
 Hîsyêô is also considered an [analytic
 language](https://en.wikipedia.org/wiki/Analytic_language), which means that
-prepositions, particles and modifiers are used to provide the additional meaning
-to words instead of adding prefixes and affixes to words. English is mostly an
-analytic language although there are some instances of affixes (such as "-ed",
-"-ing", "-s"). There are no prefixes and affices in Hîsyêô, all meaning is
-provided via words and prepositions and particles.
+prepositions, particles and modifiers (grammatical relations) are separate words
+that provide the additional meaning to words (instead of inflection or affixes
+that are used in [synthetic
+languages](https://en.wikipedia.org/wiki/Synthetic_language)). English is mostly
+an analytic language although there are some instances of affixes (such as
+"-ed", "-ing", "-s"). There are no prefixes nor affixes in Hîsyêô, all meaning
+is provided via separate words in known as prepositions and particles.
 
 ### Constituent Word Order
 
@@ -43,10 +51,10 @@ order](https://en.wikipedia.org/wiki/Word_order#Constituent_word_orders).
 Sentences are made up of verb and noun phrases that exist within prepositional
 phrases. Let's ignore what prepositional phrases are available for the time
 being and just zoom out and think about subject phrases (with noun phrases
-within), action phrases (with verb phrases within), and semantic phrases (with
+within), action phrases (with verb phrases within), and thematic phrases (with
 noun phrases within). Many languages require that you order your sentence in a
 particular way such that each element along the way can be understood as a
-paritcular part of the sentence. Some of the most popular constituent orders
+paritcular part of the sentence. Some of the most prevalent constituent orders
 that occur in natural languages include:
 [subject-object-verb](https://en.wikipedia.org/wiki/Subject%E2%80%93object%E2%80%93verb_word_order),
 [subject-verb-object](https://en.wikipedia.org/wiki/Subject%E2%80%93verb%E2%80%93object_word_order),
@@ -58,11 +66,11 @@ different parts of the sentence. In these languages, the order in which the
 parts of a sentence are provided may indicate the theme or theme of a sentence
 as well.
 
-Hîsyêô has a free constituent order because all sentence parts are marked by a
-preposition. From a topic-comment lens, the order of your sentence puts the
-first provided element as the topic and the rest as successively less important
-comments about the topic. That said, there are three irregularities that reduce
-the freedom slightly. 
+Hîsyêô has a mostly free constituent order because all sentence parts are marked
+by a preposition. The order of your sentence puts the first provided element as
+the topic and each successive constituent as comments about the topic in order
+of importance. That said, there are three irregularities that reduce the freedom
+slightly. 
 
 #### Irregularity #1: First Constituent Agent Elision
 
@@ -90,9 +98,9 @@ new sentence. This means that there's some difficulty when expressing compound
 sentences that hinge on a change in verb but there are ways around it.
 
 <HisyeoTabs>
-    <p>nîmû fôlun xe tûu kon dodê yodo kon xîkô ko.&emsp;<em>"Do you want to go swimming or flying?"</em></p>
-    <p>nîo yûnyoû mokon yodo îskô ko.&emsp;<em>"Do they have food or drink?"</em></p>
-    <p>mênyûu onô bi ôhêl bi môcîbo kelo kelo kôto hoî bitûn mûlû. &emsp;<em>"The kids were playing and talking all night."</em></p>
+    <p>nîmû fôlun xe dênêmêk kon xobo yodo kon bôkôfoc ko.&emsp;<em>"Do you want to practice hitting or blocking?"</em></p>
+    <p>nîo buswen mokon yodo îskô ko.&emsp;<em>"Do they need food or drink?"</em>&emsp;<small>(Instead of "Do they need to eat or to drink?")</small></p>
+    <p>mênyûu onô bi ôhêl bi môcîbo kelo kelo kôto kôto hoî bitûn mûlû. &emsp;<em>"The kids were playing and talking all night."</em></p>
 </HisyeoTabs>
 
 ### Null Constituents
@@ -108,14 +116,26 @@ copula**. This means that the relationship between the subject and the thematic
 constituents can be inferred through the surrounding sentence, prior sentences
 or any other contextual cues.
 
+<HisyeoTabs>
+    <p>nîmû (li gô) hoî ulyô ko.&emsp;<em>Are you there?</em></p>
+    <p>(noyo) (li gô) hoî ôfo.&emsp;<em>I am here.</em></p>
+    <p>(nîmû) (li gô) hoî zik?&emsp;<em>Where are you?</em></p>
+    <p>(noyo) (li gô) bi cônkôk hoî ôfo.&emsp;<em>Right here.</em></p>
+    <p>(nîmû) (li gô) oxon zik dên noyo?&emsp;<em>Why are you against me?</em></p>
+    <p>(noyo) (li gô) nênko fos noyo kôî li gô (misli ulyô).&emsp;<em>Because I can be.</em></p>
+</HisyeoTabs>
+
+In the last sentence, the subordinate clause inside of the <HisyeoWord is='nênko'/> preposition
+phrase could not have its verb elided because we needed to apply the epistemic verb particle.
+
 ### Phrase Word Order
 
-Each constituent has a marker and a phrase (either a verb, adverb or noun).
+Each constituent has a marker and a phrase (either an adverb or a noun).
 Within any given phrase there is always one word that is the main contents of
 that phrase. This is known as the
 [nucleus](https://en.wikipedia.org/wiki/Head_(linguistics)) of the phrase. In
-some languages the nucleus is the first word and in other languages the nucleus
-is the last word in a phrase. The nucleus of an action phrase is a verb, the
+some languages the nucleus is the *first* word and in other languages the nucleus
+is the *last* word in a phrase. The nucleus of an action phrase is a verb, the
 nucleus of a subject or semantic phrase is a noun. Hîsyêô has a nucleus in the
 middle of a phrase (it *is* a nucleus, after all). Determiners go to the *left*
 of the nucleus and modifiers to the *right*.
@@ -150,14 +170,23 @@ clauses. These clauses are joined together using conjunctions.
 A complex sentence consists of one independent clause and at least one dependent
 clause.
 
-*Examples needed*
+<HisyeoTabs>
+    <p>nîo nocîdo sî kelo nênko fos nîo li sî bîcûon.&emsp;<em>He lost the game because he was tired.</em></p>
+    <p>nênko fos nîo li sî bîcûon, û nîo nocîdo sî kelo.&emsp;<em>Because she was tired, she lost the game.</em></p>
+    <p>kûu xokûlû noyo hôn fos nîmû li nô lôtfen.&emsp;<em>Please call me, if you go.</em></p>
+    <p>hôn fos nîmû li nô, kûu xokûlû noyo lôtfen.&emsp;<em>If you go, please call me.</em></p>
+</HisyeoTabs>
 
 ### Compound-Complex
 
 A compound–complex sentence (or complex–compound sentence) consists of multiple
 independent clauses, at least one of which has at least one dependent clause.
 
-*Examples needed*
+<HisyeoTabs>
+    <p>nîo li sî nô oxon xe ogolol ônî dûngo nênko fos ondo sî côûfon bitûn oxon kon mokon, bînê zowo mokon sî côûfon nîo.&emsp;<em>He went to grab a fork because dinner was ready to eat and then the dog ate his meal.</em></p>
+    <p>noyo sûko yôk ûnfûnô lêkin û noyo ke mokon ni hôn fos noyo bît buswen (xe tûu ni).&emsp;<em>I don't like vegetables but I'll eat them if I have to.</em></p>
+    <p>umo wohî onô xe sûn dûî zomo îlê xokôn cok, xokûlû sî noyo hoî hêlxun eswen bînê noyo xokûlû nîo bi dukwêlit.&emsp;<em>The woman from two blocks down called me earlier so I called her back.</em></p>
+</HisyeoTabs>
 
 ## Speech Acts
 
