add family tree to small talk lesson

--- a/docs/lessons/small-talk.mdx
+++ b/docs/lessons/small-talk.mdx
@@ -45,14 +45,177 @@ Often times we also ask if someone is feeling good or tell others about a recent
 sickness we experienced.
 
 <HisyeoTabs>
-    <p>nîmû oncêmon zôtêstô (sohoû) hoî lono ôfo noî umo Sokuloyo?&emsp;<em>Are you feeling okay today, Zaccaria?</em></p>
-    <p>noî umo Wûon nîmû dôstoc sobûnî ko.&emsp;<em>Juan, did you get sick?</em></p>
+    <p>nîmû oncêmon zôtêstô (sohoû) hoî lono ôfo noî umo Sokuloyo ko.&emsp;<em>Are you feeling okay today, Zaccaria?</em></p>
+    <p>noî umo Wûon û nîmû dôstoc sobûnî ko.&emsp;<em>Juan, did you get sick?</em></p>
     <p>noyo oncêmon yôk xôn noî Nôê.&emsp;<em>I am not feeling well, Noe.</em></p>
-    <p>umo Yilî li sobûnî lôîcôk bînê nîo buswen xe nocîdo wêloi hoî lono ôfo.&emsp;<em>Yury is so sick that he had to skip work today.</em></p>
+    <p>umo Yûlî li sobûnî lôîcôk bînê nîo buswen xe nocîdo wêloi hoî lono ôfo.&emsp;<em>Yury is so sick that he had to skip work today.</em></p>
     <p>umo Ulsenî oncêmon êto xôn eswen bînê nûs cînlî côûfon mutyu ofek nîo hoî lono xobêk.&emsp;<em>Arseny is feeling much better that we had lunch with her yesterday.</em></p>
 </HisyeoTabs>
 
 ## Family & Friends
+
+Another common topic is our nuclear families and how members of our families are doing.
+
+### Family Tree
+
+<Tabs groupId="bobôun-kon-cukto" queryString>
+  <TabItem value="latin" label="Latin" default>
+    <table><tbody>
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Great-great-grandparents<br/><br/>
+            <HisyeoText kind='latin'>motûo motûo cên cên</HisyeoText></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Great-grandparents<br/><br/>
+            <HisyeoText kind='latin'>motûo motûo cên</HisyeoText></td>
+        <td>Great-granduncle/aunt<br/><br/>
+            <HisyeoText kind='latin'>siskin yê motûo motûo cên cên</HisyeoText></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+        <td>Grandparents<br/><br/>
+            <HisyeoText kind='latin'>motûo motûo</HisyeoText></td>
+        <td>Granduncle/aunt<br/><br/>
+            <HisyeoText kind='latin'>siskin yê motûo motûo</HisyeoText></td>
+        <td>First cousin twice removed<br/><br/>
+            <HisyeoText kind='latin'>hîsmo kut xe bi dûî li fonmot</HisyeoText></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td>Parents<br/><br/>
+            <HisyeoText kind='latin'>motûo</HisyeoText></td>
+        <td>Uncle/aunt<br/><br/>
+            <HisyeoText kind='latin'>siskin motûo</HisyeoText></td>
+        <td>First cousin once removed<br/><br/>
+            <HisyeoText kind='latin'>hîsmo kut xe bi kut li fonmot</HisyeoText></td>
+        <td>Second cousin once removed<br/><br/>
+            <HisyeoText kind='latin'>hîsmo dûî xe bi kut li fonmot</HisyeoText></td>
+    </tr>
+    <tr>
+        <td>You<br/><br/>
+            <HisyeoText kind='latin'>nîmû</HisyeoText></td>
+        <td>Sibling<br/><br/>
+            <HisyeoText kind='latin'>siskin</HisyeoText></td>
+        <td>First cousin<br/><br/>
+            <HisyeoText kind='latin'>hîsmo kut</HisyeoText></td>
+        <td>Second cousin<br/><br/>
+            <HisyeoText kind='latin'>hîsmo dûî</HisyeoText></td>
+        <td>Third cousin<br/><br/>
+            <HisyeoText kind='latin'>hîsmo niswî</HisyeoText></td>
+    </tr>
+    <tr>
+        <td>Children<br/><br/>
+            <HisyeoText kind='latin'>mênyûu</HisyeoText></td>
+        <td>Niece/Nephew<br/><br/>
+            <HisyeoText kind='latin'>mênyûu siskin</HisyeoText></td>
+        <td>First cousin once removed<br/><br/>
+            <HisyeoText kind='latin'>hîsmo kut xe bi kut li fonmot</HisyeoText></td>
+        <td>Second cousin once removed<br/><br/>
+            <HisyeoText kind='latin'>hîsmo dûî xe bi kut li fonmot</HisyeoText></td>
+        <td>Third cousin once removed<br/><br/>
+            <HisyeoText kind='latin'>hîsmo niswî xe bi kut li fonmot</HisyeoText></td>
+    </tr>
+    <tr>
+        <td>Grandchildren<br/><br/>
+            <HisyeoText kind='latin'>mênyûu mênyûu</HisyeoText></td>
+        <td>Grandniece/Grandnephew<br/><br/>
+            <HisyeoText kind='latin'>mênyûu mênyûu siskin</HisyeoText></td>
+        <td>First cousin twice removed<br/><br/>
+            <HisyeoText kind='latin'>hîsmo kut xe bi dûî li fonmot</HisyeoText></td>
+        <td>Second cousin twice removed<br/><br/>
+            <HisyeoText kind='latin'>hîsmo dûî xe bi dûî li fonmot</HisyeoText></td>
+        <td>Third cousin twice removed<br/><br/>
+            <HisyeoText kind='latin'>hîsmo niswî xe bi dûî li fonmot</HisyeoText></td>
+    </tr>
+    </tbody></table>
+  </TabItem>
+  <TabItem value="obûgîdo" label="ɽʋʄꜿɟʌ">
+    <table><tbody>
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Great-great-grandparents<br/><br/>
+            <HisyeoText kind='abugida'>motûo motûo cên cên</HisyeoText></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Great-grandparents<br/><br/>
+            <HisyeoText kind='abugida'>motûo motûo cên</HisyeoText></td>
+        <td>Great-granduncle/aunt<br/><br/>
+            <HisyeoText kind='abugida'>siskin yê motûo motûo cên cên</HisyeoText></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+        <td>Grandparents<br/><br/>
+            <HisyeoText kind='abugida'>motûo motûo</HisyeoText></td>
+        <td>Granduncle/aunt<br/><br/>
+            <HisyeoText kind='abugida'>siskin yê motûo motûo</HisyeoText></td>
+        <td>First cousin twice removed<br/><br/>
+            <HisyeoText kind='abugida'>hîsmo kut xe bi dûî li fonmot</HisyeoText></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td>Parents<br/><br/>
+            <HisyeoText kind='abugida'>motûo</HisyeoText></td>
+        <td>Uncle/aunt<br/><br/>
+            <HisyeoText kind='abugida'>siskin motûo</HisyeoText></td>
+        <td>First cousin once removed<br/><br/>
+            <HisyeoText kind='abugida'>hîsmo kut xe bi kut li fonmot</HisyeoText></td>
+        <td>Second cousin once removed<br/><br/>
+            <HisyeoText kind='abugida'>hîsmo dûî xe bi kut li fonmot</HisyeoText></td>
+    </tr>
+    <tr>
+        <td>You<br/><br/>
+            <HisyeoText kind='abugida'>nîmû</HisyeoText></td>
+        <td>Sibling<br/><br/>
+            <HisyeoText kind='abugida'>siskin</HisyeoText></td>
+        <td>First cousin<br/><br/>
+            <HisyeoText kind='abugida'>hîsmo kut</HisyeoText></td>
+        <td>Second cousin<br/><br/>
+            <HisyeoText kind='abugida'>hîsmo dûî</HisyeoText></td>
+        <td>Third cousin<br/><br/>
+            <HisyeoText kind='abugida'>hîsmo niswî</HisyeoText></td>
+    </tr>
+    <tr>
+        <td>Children<br/><br/>
+            <HisyeoText kind='abugida'>mênyûu</HisyeoText></td>
+        <td>Niece/Nephew<br/><br/>
+            <HisyeoText kind='abugida'>mênyûu siskin</HisyeoText></td>
+        <td>First cousin once removed<br/><br/>
+            <HisyeoText kind='abugida'>hîsmo kut xe bi kut li fonmot</HisyeoText></td>
+        <td>Second cousin once removed<br/><br/>
+            <HisyeoText kind='abugida'>hîsmo dûî xe bi kut li fonmot</HisyeoText></td>
+        <td>Third cousin once removed<br/><br/>
+            <HisyeoText kind='abugida'>hîsmo niswî xe bi kut li fonmot</HisyeoText></td>
+    </tr>
+    <tr>
+        <td>Grandchildren<br/><br/>
+            <HisyeoText kind='abugida'>mênyûu mênyûu</HisyeoText></td>
+        <td>Grandniece/Grandnephew<br/><br/>
+            <HisyeoText kind='abugida'>mênyûu mênyûu siskin</HisyeoText></td>
+        <td>First cousin twice removed<br/><br/>
+            <HisyeoText kind='abugida'>hîsmo kut xe bi dûî li fonmot</HisyeoText></td>
+        <td>Second cousin twice removed<br/><br/>
+            <HisyeoText kind='abugida'>hîsmo dûî xe bi dûî li fonmot</HisyeoText></td>
+        <td>Third cousin twice removed<br/><br/>
+            <HisyeoText kind='abugida'>hîsmo niswî xe bi dûî li fonmot</HisyeoText></td>
+    </tr>
+    </tbody></table>
+  </TabItem>
+</Tabs>
 
 ## Loss & Condolences
 
