Small fixes for table

--- a/docs/lessons/small-talk.mdx
+++ b/docs/lessons/small-talk.mdx
@@ -76,7 +76,7 @@ Another common topic is our nuclear families and how members of our families are
         <td>Great-grandparents<br/><br/>
             <HisyeoText kind='latin'>motûo motûo cên</HisyeoText></td>
         <td>Great-granduncle/aunt<br/><br/>
-            <HisyeoText kind='latin'>siskin yê motûo motûo cên cên</HisyeoText></td>
+            <HisyeoText kind='latin'>siskin yê motûo motûo cên</HisyeoText></td>
     </tr>
     <tr>
         <td></td>
@@ -114,7 +114,7 @@ Another common topic is our nuclear families and how members of our families are
     <tr>
         <td>Children<br/><br/>
             <HisyeoText kind='latin'>mênyûu</HisyeoText></td>
-        <td>Niece/Nephew<br/><br/>
+        <td>Niece / Nephew<br/><br/>
             <HisyeoText kind='latin'>mênyûu siskin</HisyeoText></td>
         <td>First cousin once removed<br/><br/>
             <HisyeoText kind='latin'>hîsmo kut xe bi kut li fonmot</HisyeoText></td>
@@ -126,7 +126,7 @@ Another common topic is our nuclear families and how members of our families are
     <tr>
         <td>Grandchildren<br/><br/>
             <HisyeoText kind='latin'>mênyûu mênyûu</HisyeoText></td>
-        <td>Grandniece/Grandnephew<br/><br/>
+        <td>Grandniece / Grandnephew<br/><br/>
             <HisyeoText kind='latin'>mênyûu mênyûu siskin</HisyeoText></td>
         <td>First cousin twice removed<br/><br/>
             <HisyeoText kind='latin'>hîsmo kut xe bi dûî li fonmot</HisyeoText></td>
@@ -154,7 +154,7 @@ Another common topic is our nuclear families and how members of our families are
         <td>Great-grandparents<br/><br/>
             <HisyeoText kind='abugida'>motûo motûo cên</HisyeoText></td>
         <td>Great-granduncle/aunt<br/><br/>
-            <HisyeoText kind='abugida'>siskin yê motûo motûo cên cên</HisyeoText></td>
+            <HisyeoText kind='abugida'>siskin yê motûo motûo cên</HisyeoText></td>
     </tr>
     <tr>
         <td></td>
@@ -192,7 +192,7 @@ Another common topic is our nuclear families and how members of our families are
     <tr>
         <td>Children<br/><br/>
             <HisyeoText kind='abugida'>mênyûu</HisyeoText></td>
-        <td>Niece/Nephew<br/><br/>
+        <td>Niece / Nephew<br/><br/>
             <HisyeoText kind='abugida'>mênyûu siskin</HisyeoText></td>
         <td>First cousin once removed<br/><br/>
             <HisyeoText kind='abugida'>hîsmo kut xe bi kut li fonmot</HisyeoText></td>
@@ -204,7 +204,7 @@ Another common topic is our nuclear families and how members of our families are
     <tr>
         <td>Grandchildren<br/><br/>
             <HisyeoText kind='abugida'>mênyûu mênyûu</HisyeoText></td>
-        <td>Grandniece/Grandnephew<br/><br/>
+        <td>Grandniece / Grandnephew<br/><br/>
             <HisyeoText kind='abugida'>mênyûu mênyûu siskin</HisyeoText></td>
         <td>First cousin twice removed<br/><br/>
             <HisyeoText kind='abugida'>hîsmo kut xe bi dûî li fonmot</HisyeoText></td>
