Fix family tree table

--- a/docs/lessons/small-talk.mdx
+++ b/docs/lessons/small-talk.mdx
@@ -60,28 +60,19 @@ Another common topic is our nuclear families and how members of our families are
 
 <Tabs groupId="bobôun-kon-cukto" queryString>
   <TabItem value="latin" label="Latin" default>
-    <table><tbody>
+    <table style={{'text-align': 'center'}}><tbody>
     <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td>Great-great-grandparents<br/><br/>
+        <td colspan="5">Great-great-grandparents<br/><br/>
             <HisyeoText kind='latin'>motûo motûo cên cên</HisyeoText></td>
     </tr>
     <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td>Great-grandparents<br/><br/>
+        <td colspan="4">Great-grandparents<br/><br/>
             <HisyeoText kind='latin'>motûo motûo cên</HisyeoText></td>
         <td>Great-granduncle/aunt<br/><br/>
             <HisyeoText kind='latin'>siskin yê motûo motûo cên</HisyeoText></td>
     </tr>
     <tr>
-        <td></td>
-        <td></td>
-        <td>Grandparents<br/><br/>
+        <td colspan="3">Grandparents<br/><br/>
             <HisyeoText kind='latin'>motûo motûo</HisyeoText></td>
         <td>Granduncle/aunt<br/><br/>
             <HisyeoText kind='latin'>siskin yê motûo motûo</HisyeoText></td>
@@ -89,8 +80,7 @@ Another common topic is our nuclear families and how members of our families are
             <HisyeoText kind='latin'>hîsmo kut xe bi dûî li fonmot</HisyeoText></td>
     </tr>
     <tr>
-        <td></td>
-        <td>Parents<br/><br/>
+        <td colspan="2">Parents<br/><br/>
             <HisyeoText kind='latin'>motûo</HisyeoText></td>
         <td>Uncle/aunt<br/><br/>
             <HisyeoText kind='latin'>siskin motûo</HisyeoText></td>
@@ -138,28 +128,19 @@ Another common topic is our nuclear families and how members of our families are
     </tbody></table>
   </TabItem>
   <TabItem value="obûgîdo" label="ɽʋʄꜿɟʌ">
-    <table><tbody>
+    <table style={{'text-align': 'center'}}><tbody>
     <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td>Great-great-grandparents<br/><br/>
+        <td colspan="5">Great-great-grandparents<br/><br/>
             <HisyeoText kind='abugida'>motûo motûo cên cên</HisyeoText></td>
     </tr>
     <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td>Great-grandparents<br/><br/>
+        <td colspan="4">Great-grandparents<br/><br/>
             <HisyeoText kind='abugida'>motûo motûo cên</HisyeoText></td>
         <td>Great-granduncle/aunt<br/><br/>
             <HisyeoText kind='abugida'>siskin yê motûo motûo cên</HisyeoText></td>
     </tr>
     <tr>
-        <td></td>
-        <td></td>
-        <td>Grandparents<br/><br/>
+        <td colspan="3">Grandparents<br/><br/>
             <HisyeoText kind='abugida'>motûo motûo</HisyeoText></td>
         <td>Granduncle/aunt<br/><br/>
             <HisyeoText kind='abugida'>siskin yê motûo motûo</HisyeoText></td>
@@ -167,8 +148,7 @@ Another common topic is our nuclear families and how members of our families are
             <HisyeoText kind='abugida'>hîsmo kut xe bi dûî li fonmot</HisyeoText></td>
     </tr>
     <tr>
-        <td></td>
-        <td>Parents<br/><br/>
+        <td colspan="2">Parents<br/><br/>
             <HisyeoText kind='abugida'>motûo</HisyeoText></td>
         <td>Uncle/aunt<br/><br/>
             <HisyeoText kind='abugida'>siskin motûo</HisyeoText></td>
