--- a/docs/lessons/small-talk.mdx
+++ b/docs/lessons/small-talk.mdx
@@ -202,10 +202,8 @@ Another common topic is our nuclear families and how members of our families are
 Unfortunately, we all lose loved ones at some point. Here are some different
 expressions and responses you can use. 
 
-{/* /ˌbrɔ.ɲi.ˈswa.va/ */}
-
 <HisyeoTabs>
-    <p>noyo hûsku kukwon zomo kon bêûdo nûs Bulônîswofo ko. nîo bi ubênus dî si tîkû.&emsp;<em>Do you remember our classmate Bronisława? She just passed away. </em></p>
+    <p>nîmû hûsku kukwon zomo kon bêûdo nûs Bulônîswofo ko. nîo bi ubênus dî si tîkû.&emsp;<em>Do you remember our classmate Bronisława? She just passed away. </em></p>
     <p>motûo wohî noyo dî sî tîkû hoî wokût ôhêl mônbili.&emsp;<em>My mom died a while ago.</em></p>
     <p>motûo moskûl nîmû bi kônyêc dî sî tîkû ko.&emsp;<em>Did your father finally pass?</em></p>
     <p>dî.&emsp;<em>Yes, he did.</em></p>
@@ -223,7 +221,7 @@ Here are some things you can say to show your condolences.
     <p>(noyo) kôî wêko yôk cizî hoî êtsô nîmû.&emsp;<em>I cannot put myself in your situation.</em></p>
     <p>(noyo) fisun fos li xoînbo û fos uyo li otikon kutin hoî îbûdû cônkôk.&emsp;<em>I know things seem too difficult right now.</em></p>
     <p>kûu dênêmêk xe ogolol xîwon.&emsp;<em>Try to hang on to hope.</em></p>
-    <p>(mût noyo) kûu hobîyô fos nîmû bît buswen xe kôto yodo kut umo fos li êo nonto ofek.&emsp;<em>Let me know if you need to talk or just someone to cry with.</em></p>
+    <p>(mût noyo) kûu hobîyô hôn fos nîmû bît buswen xe kôto yodo kut umo fos li êo nonto ofek.&emsp;<em>Let me know if you need to talk or just someone to cry with.</em></p>
     <p>(noyo) fisun fos li xûnyu fos noyo kôî kôto oxon fos ôlê tônkô nîmû li êo fonmot.&emsp;<em>I know there is nothing I can say to make your pain go away.</em></p>
     <p>kûu fisun fos noyo hoî môî wokût ke li gô hoî ulyô oxon nîmû.&emsp;<em>Please know that I will always be there for you.</em></p>
 </HisyeoTabs>
