add weather examples

--- a/docs/lessons/small-talk.mdx
+++ b/docs/lessons/small-talk.mdx
@@ -228,4 +228,15 @@ Here are some things you can say to show your condolences.
 
 ## Weather
 
+It's also common to talk about the weather since meteorologists don't seem to
+know what they're doing anymore.
+
+<HisyeoTabs>
+    <p>bi zik û kêlôs li sî gô hoî boxô nîmû?&emsp;<em>How has the weather been in your neck of the woods?</em></p>
+    <p>nîmû yûnyoû sî kônên oxon xe li gô hoî wokto ko.&emsp;<em>Have you had a chance to get outside today?</em></p>
+    <p>kûu wuîtsî lîmîen hôn fos nîmû fôlun xe uskîfo hûzon onô.&emsp;<em>Stay indoors if you want to avoid the rain.</em></p>
+    <p>li hûzon bûgot ûn tenkîn bôkbûn lêkin û noyo dêko yôk ozûul kûon bôkbûn.&emsp;<em>There is heavy rain and thunder but I didn't see any lightning.</em></p>
+    <p>li sî fûongok yê êto longi cihôû bôkbûn onô xe hoî lono unbol.&emsp;<em>There was a beautiful rainbow after the storm on Saturday.</em></p>
+</HisyeoTabs>
+
 <HisyeoTooltip />
