Move question content to new reference page, move all grammar content to admonitions in greetings and salutations lesson

--- a/docs/lessons/greetings-salutations.mdx
+++ b/docs/lessons/greetings-salutations.mdx
@@ -45,6 +45,17 @@ you want to just focus in on learning the phrases.
 
 ### Meeting Someone
 
+Meeting other Hîsyêô speakers is a great way to improve your language skills and
+create new friendships. 
+
+<HisyeoTabs>
+    <p>noyo monodo nîo hoî suhot dus.&emsp;<em>I am meeting them at 10</em></p>
+    <p>nûs kûu monodo oxon côûfon bitûn cî.&emsp;<em>Let's meet for supper, sound good?</em></p>
+    <p>nîmû fôlun xe monodo noyo hoî cihôû ko.&emsp;<em>Do you want to meet me later?</em></p>
+</HisyeoTabs>
+
+:::tip Grammar Used
+
 In the first sentence, we are using a simple sentence with a transitive verb,
 two pronouns. This is your standard subject, verb, object sentence. With the
 addition of one preposition at the end.
@@ -60,116 +71,13 @@ Finally, the last sentence is where we make use of a subjective subordinate
 clause we learned about above. It indicates that an *action* is what is desired
 (the verb of the main predicate).
 
-<HisyeoTabs>
-    <p>noyo monodo nîo hoî suhot dus.&emsp;<em>I am meeting them at 10</em></p>
-    <p>nûs kûu monodo oxon côûfon bitûn cî.&emsp;<em>Let's meet for supper, sound good?</em></p>
-    <p>nîmû fôlun xe monodo noyo hoî cihôû ko.&emsp;<em>Do you want to meet me later?</em></p>
-</HisyeoTabs>
-
-:::info Responding to questions
-
-There are three types of questions that need a special answer: polar questions,
-propositive questions, and pro-form questions. Each one is answered slightly
-differently.
-
-#### Polar Questions
-
-A polar question (in English, these are often called yes-no questions) is one
-where you are offering a state or action and asking someone to indicate if that
-state or action is affirmed or not affirmed (i.e., true or false, respectively).
-
-To answer a polar question, you can respond with the verb that was used in the
-question or the negatitive marker (<HisyeoWord is='yôk'/>) or both.
-
-<HisyeoTabs>
-    <p>ke mokon ni hoî lono uklo ko.&emsp;<em>"Will you eat it tomorrow?"</em></p>
-    <p>mokon.&emsp;<em>"Yes."</em></p>
-    <p>nîmû côûfon ôfo ko.&emsp;<em>"Did you cook this?"</em></p>
-    <p>yôk.&emsp;<em>"No."</em></p>
-    <p>nîmû monodo sî nîo bi ôhel ko.&emsp;<em>"Have you met them before?"</em></p>
-    <p>monodo yôk.&emsp;<em>"I haven't"</em></p>
-</HisyeoTabs>
-
-Or, in the case of a subject complement sentence, you can respond with the
-nucleus of the complement, the verb for "to exist" (<HisyeoWord is='gô'/>) or
-the negatitive marker (<HisyeoWord is='yôk'/>).
-
-<HisyeoTabs>
-    <p>ke li gô hoî ôfo hoî lono uklo ko.&emsp;<em>"Will you be here tomorrow?"</em></p>
-    <p>gô.&emsp;<em>"Yes"</em></p>
-    <p>nîmû li cunyû ko.&emsp;<em>"Are you cold?"</em></p>
-    <p>cunyû.&emsp;<em>"Yes"</em></p>
-    <p>umo Somiel li gô hoî ulyô hoî bitûn ôfo ko.&emsp;<em>"Was Samuel there tonight?"</em></p>
-    <p>yôk.&emsp;<em>"No"</em></p>
-</HisyeoTabs>
-
-In either case, you can also respond with "true" (<HisyeoWord is='hokîkî'/>) or
-"false" (<HisyeoWord is='hûdul'/>).
-
-<HisyeoTabs>
-    <p>ôlê zowo mokon êo sî hoî bitûn ôfo ko.&emsp;<em>"Did the dog get fed tonight?"</em></p>
-    <p>hûdul.&emsp;<em>"False."</em></p>
-</HisyeoTabs>
-
-#### Propositive Questions
-
-A propositive question (in English, these don't have a specific form but involve
-usage of specific sentence ending phrases like "agreed?" or "sound good?") is
-one where you are offering a state or action with an irrealis mood and
-requesting someone to indicate if they agree.
-
-Like the polar questions, you can respond with the verb that was used in the
-question or the negatitive marker (<HisyeoWord is='yôk'/>) or both.
-
-<HisyeoTabs>
-    <p>nîmû mokon ofek noyo hoî lono uklo cî.&emsp;<em>"Does you eating with me tomorrow sound good?"</em></p>
-    <p>mokon.&emsp;<em>"Yes."</em></p>
-    <p>nûs côûfon ôfo cî.&emsp;<em>"Let's cook this!"</em></p>
-    <p>yôk.&emsp;<em>"No."</em></p>
-    <p>nîmû monodo nîo cî.&emsp;<em>"Do you agree to meet them?"</em></p>
-    <p>monodo yôk.&emsp;<em>"I don't."</em></p>
-</HisyeoTabs>
-
-Or, in the case of a subject complement sentence, you can respond with the
-nucleus of the complement, the verb "to agree" (<HisyeoWord is='wofok'/>) or the
-negatitive marker (<HisyeoWord is='yôk'/>).
-
-<HisyeoTabs>
-    <p>ke li gô hoî ôfo hoî lono uklo cî.&emsp;<em>"You will be here tomorrow, right?"</em></p>
-    <p>wofok.&emsp;<em>"Agreed."</em></p>
-    <p>nîmû li cunyû cî.&emsp;<em>"You will be cold, okay?"</em></p>
-    <p>cunyû.&emsp;<em>"Yes"</em></p>
-    <p>umo Somiel kûu li gô hoî ulyô hoî bitûn ôfo cî.&emsp;<em>"Samuel must be there tonight, right?"</em></p>
-    <p>yôk.&emsp;<em>"No"</em></p>
-</HisyeoTabs>
-
-Unlike polar questions, you can't respond with "true" or "false" but you can
-make more formal approval setnences by making use of the verb "to agree".
-
-<HisyeoTabs>
-    <p>û nîmû ôlê zowo onô mokon êo hoî bitûn ôfo cî.&emsp;<em>"You will feed the dog tonight, sound good?"</em></p>
-    <p>noyo wofok yôk nênko fos noyo kûu li nô mût dênêmêk yê zomo kîôsô noyo.&emsp;<em>"I do not agree because I must go to my team's practice."</em></p>
-</HisyeoTabs>
-
-#### Pro-Form Questions
-
-A pro-form question (in English, these are called open questions) is one where
-the interrogative word (<HisyeoWord is='zik'/>) is either a nucleus of a
-preposition (a noun) or a modifier.
-
-<HisyeoTabs>
-    <p>noyo kûu ôntôn zik mût kôndodû onô.&emsp;<em>"What clothes should I wear to the party?"</em></p>
-    <p>û cûdo yê umo zik li dibo zik.&emsp;<em>"Whose gifts are in which boxes?"</em></p>
-    <p>nênko zik û nîmû gûwolo.&emsp;<em>"Why are you scratching?"</em></p>
-</HisyeoTabs>
-
 :::
 
 ### How To Greet
 
 For the initial contact with another person, there are some common expressions
-used as pleasantries. Each one uses a subjective subordinate clause as the
-experiencer of an adjectival complement.
+that indicate your interest in meeting the other person and builds a foundation
+of respect.
 
 <HisyeoTabs>
     <p>li xôn û xe monodo nîmû lôîcôk.&emsp;<em>It is so nice to meet you.</em></p>
@@ -177,14 +85,17 @@ experiencer of an adjectival complement.
     <p>li cômêl û xe monodo nîmû.&emsp;<em>Lovely to meet you.</em></p>
 </HisyeoTabs>
 
+:::tip Grammar Used
+
+Each one uses a subjective subordinate clause as the
+experiencer of an adjectival complement.
+
+:::
+
 ### Responding To A Greeting
 
-The standard "thank you" can be interpreted as either being subjectless or a
-first-person subject drop. The context preposition indicates that the
-thankfulness is concerning that marked object. Use adjectives on the
-thankfulness to expand on the meaning. In the third example, we are interpeting
-the "much" as being adverbial (i.e., they have been thankful many times) and the
-added emphasis sentence ender is being used to represent "so".
+After being greeted, it's appropriate to respond with some kind of pleasantry
+that acknowledges the respect given or reciprocates it.
 
 <HisyeoTabs>
     <p>li konxo hôn nîmû.<em>Thank you.</em></p>
@@ -194,15 +105,21 @@ added emphasis sentence ender is being used to represent "so".
     <p>li xôn û xe monodo nîmû ûtok.&emsp;<em>It is nice to meet you too.</em></p>
 </HisyeoTabs>
 
+:::tip Grammar Used
+
+The standard "thank you" can be interpreted as either being subjectless or a
+first-person subject drop. The context preposition indicates that the
+thankfulness is concerning that marked object. Use adjectives on the
+thankfulness to expand on the meaning. In the third example, we are interpeting
+the "much" as being adverbial (i.e., they have been thankful many times) and the
+added emphasis sentence ender is being used to represent "so".
+
+:::
+
 ### When You'll Meet Again
 
-Here, we are intepreting the mood in the English sentence as being deontic and
-the added ender of "ok?" is being filled by the propositive sentence ender. In
-the second sentence, we are interpeting the mood in the English sentence as
-being epistemic and the question word also means that it is effectively
-interrogative as well. In the third sentence, you have to be careful to remember
-that the second verb is being intepreted as the object of the active verb
-preposition. The fourth sentence makes use of the interrogative sentence ender.
+After meeting someone, it's important to setup the next time you'll meet. This
+helps build friendships and shows that you enjoy conversing with them in Hîsyêô.
 
 <HisyeoTabs>
     <p>nûs kûu monodo bi dîzel zelen cî.&emsp;<em>Let's meet again soon, ok?</em></p>
@@ -212,13 +129,24 @@ preposition. The fourth sentence makes use of the interrogative sentence ender.
     <p>noyo xîwon xe dêko nîmû bi zelen êto lôîcôk.&emsp;<em>I so hope to see you very soon!</em></p>
 </HisyeoTabs>
 
+:::tip Grammar Used
+
+Here, we are intepreting the mood in the English sentence as being deontic and
+the added ender of "ok?" is being filled by the propositive sentence ender. In
+the second sentence, we are interpeting the mood in the English sentence as
+being epistemic and the question word also means that it is effectively
+interrogative as well. In the third sentence, you have to be careful to remember
+that the second verb is being intepreted as the object of the active verb
+preposition. The fourth sentence makes use of the interrogative sentence ender.
+
+:::
+
 ## Introductions
 
 ### My Name Is...
 
 Proper names are an important tool to identify specific entities with great
-accuracy. In Hîsyêô, proper names are modifiers and they exist connected to a
-nucleus of some kind.
+accuracy.
 
 <HisyeoTabs>
     <p>(umo) zik li nîmû.&emsp;<em>Who are you?</em></p>
@@ -232,6 +160,12 @@ nucleus of some kind.
     <p>noyo yûnyoû somo dîzel ko.&emsp;<em>Do you have a nickname?</em></p>
     <p>somo dîzel li umo Yûsilnên123.&emsp;<em>My nickname is UserName123.</em></p>
 </HisyeoTabs>
+
+:::tip Grammar Used
+
+Proper names are modifiers and they exist connected to a noun phrase nucleus.
+
+:::
 
 ### Introducting others
 
@@ -247,18 +181,20 @@ proper name can be seen as an honorific. There are several words that are common
     <p>nîmû monodo foko bêûdo Ismêl ko.&emsp;<em>Have you met teacher Ismail?</em></p>
 </HisyeoTabs>
 
-:::warn know vs meet
+:::warning know vs meet
 
-There are two different ways you can "know" someone or something. When you know
-a subject, having once studied it or if you practice it everry day, that is one
-sense. When you have seen someone and can describe them, or have tried a method,
-or any other thing that you have been exposed to in some capacity that is
-slightly more than just being acquaintances, that is the other sense.
+In many languages, there are two different connotations you can "know" someone
+or something. When you know a topic, having once studied it or if you practice a
+skill every day, that is one sense. When you have seen someone and can describe
+them, or have tried a method, or any other thing that you have been exposed to
+in some capacity that is slightly more than just being acquaintances, that is
+the other sense. An alternative translation could be "to be familiar with".
 
 In Hîsyêô, the verb <HisyeoWord is='fôlun'/> is intended only for the first
-sense. The verb <HisyeoWord is='monodo'/> is intended for the the second sense.
+sense. The verbs <HisyeoWord is='monodo'/> or <HisyeoWord is='zîcoû'/> can be
+used for the second sense.
 
-To imply that you "just met", you can use <HisyeoWord is='ubênus'/> in a manner
+To imply that you just met, you can use <HisyeoWord is='ubênus'/> in a manner
 preposition.
 
 :::
@@ -271,6 +207,19 @@ to grow and builds stronger bonds amongst its members.
 
 ### Inviting Someone
 
+You must always have the courage to put yourself out there with an invitation.
+Even if the person isn't able to accept, it's always seen as a sign of respect
+and admiration.
+
+<HisyeoTabs>
+    <p>umo Dominik xokûlû si umo Kinen oxon kon kôto yê mocko.&emsp;<em>Dominick called Keenan for a conversation about cats.</em></p>
+    <p>nîmû ke xokûlû umo Kulisti mût (fos li nô mut) kôndodû onô ko.&emsp;<em>Will you invite Christie to (go to) the party?</em></p>
+    <p>noyo bi centik xokûlû nîmû mût côûfon kon môtô yê comen soden yê niwos noyo&emsp;<em>I formally invite you to my backyard barbecue.</em></p>
+    <p>umo Gulolîo xokûlû umo Bilondî oxon xe xokûlû nîo mût fos tûu kon mûhoyon. &emsp;<em>Gloria called Brandy to invite her to go camping.</em></p>
+</HisyeoTabs>
+
+:::tip Grammar Used
+
 The verb <HisyeoWord is='xokûlû'/> is used for both calling and inviting
 actions. For the sense of "calling on the telephone", you would say that you
 invited someone to a conversation electronically. The direct object of the verb
@@ -279,12 +228,7 @@ patient to partipcipate in. It is supplied using <HisyeoWord is='mût'/> but if
 the purpose of the invitation is the same as the invited action, you can use the
 preposition <HisyeoWord is='oxon'/>.
 
-<HisyeoTabs>
-    <p>umo Dominik xokûlû si umo Kinen oxon kon kôto yê mocko.&emsp;<em>Dominick called Keenan for a conversation about cats.</em></p>
-    <p>nîmû ke xokûlû umo Kulisti mût (fos li nô mut) kôndodû onô ko.&emsp;<em>Will you invite Christie to (go to) the party?</em></p>
-    <p>noyo bi centik xokûlû nîmû mût côûfon kon môtô yê comen soden yê niwos noyo&emsp;<em>I formally invite you to my backyard barbecue.</em></p>
-    <p>umo Gulolîo xokûlû umo Bilondî oxon xe xokûlû nîo mût fos tûu kon mûhoyon. &emsp;<em>Gloria called Brandy to invite her to go camping.</em></p>
-</HisyeoTabs>
+:::
 
 ### Being Invited
 
